2013-01-09  Roger Fong  <roger_fong@apple.com>

        Unreviewed. Device Proximity is not enabled/implemented on Windows.
        Skipping related tests:

        proximity/add-listener-from-callback.html
        proximity/basic-operation.html
        proximity/create-event.html
        proximity/event-after-navigation.html
        proximity/multiple-frames.html
        proximity/no-page-cache.html
        proximity/optional-event-properties.html
        proximity/updates.html
        proximity/window-property.html

        * platform/win/TestExpectations:

2013-01-09  Christophe Dumez  <christophe.dumez@intel.com>

        [WK2] Implement eventSender.scheduleAsynchronousKeyDown
        https://bugs.webkit.org/show_bug.cgi?id=93979

        Reviewed by Benjamin Poulain.

        Update WK2 expectations for tests requiring
        eventSender.scheduleAsynchronousKeyDown now that it is
        implemented in WebKitTestRunner.

        * platform/efl-wk2/TestExpectations:
        * platform/gtk-wk2/TestExpectations:
        * platform/wk2/TestExpectations:

2013-01-09  Dan Winship  <danw@gnome.org>

        [Soup] Handle redirection inside WebKit
        https://bugs.webkit.org/show_bug.cgi?id=61122
        https://bugs.webkit.org/show_bug.cgi?id=88961

        Reviewed by Martin Robinson.

        Unskip some tests.

        * platform/efl/TestExpectations:
        * platform/gtk/TestExpectations:

2013-01-09  Florin Malita  <fmalita@chromium.org>

        [Skia] Implement GraphicsContext::addRoundedRectClip() using SkCanvas::clipRRect()
        https://bugs.webkit.org/show_bug.cgi?id=106461

        Reviewed by Stephen White.

        * platform/chromium-linux/fast/backgrounds/border-radius-split-background-image-expected.png:
        * platform/chromium-linux/fast/borders/border-radius-complex-inner-expected.png:
        * platform/chromium-linux/fast/borders/border-radius-inset-outset-expected.png: